--- a/_posts/2019-07-04-the-us-narrative-today.html
+++ b/_posts/2019-07-04-the-us-narrative-today.html
@@ -2505,107 +2505,107 @@ stories:
   domain: http://www.dispatch.com/
   link: https://www.douglasdispatch.com/national/entertainment/ed-sheeran-wants-to-build-outdoor-kitchen/image_310ee2ab-98f1-591d-88d3-cef94de516dd.html
 images:
-- name: subway-subway-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-cinnamon-rolls.jpg
-- name: liberty-back-statue-liberty-back-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-monet-one.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-graham-sutherland.jpg
-- name: oldhotel-oldhotel-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-graham-sutherland.jpg
-- name: miamibeach-miamibeach-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-purple-pond.jpg
-- name: gypsymosaic-gypsy-eyes-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-post-modern.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-plentiful.jpg
-- name: old-door-lock-old-door-lock-2-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colorful-blocks.jpg
-- name: christianity-christianity-under-construction-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-really-hot.jpg
-- name: aws-s3-stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-zoomed-in-on-sea-light-dali.jpg
-- name: containership-containership-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-propaganda-leaflets.jpg
-- name: lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
-- name: old-granary-field-granaryfield-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-circuit.jpg
-- name: server-cloud-server-racks-door-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-copper-circuit-2.jpg
-- name: flower-barbed-wire-flower-barbed-wire-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-granite.jpg
-- name: bluelake-crafty-painting-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crafty-painting-file-00-00-00-00.jpg
-- name: downtown-los-angeles-downtown-la-light-dali.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-light-dali.JPG
-- name: castle-wall-DSC-0067-crafty-painting.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-crafty-painting.JPG
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-nazi-poster.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-green-zuma.png
-- name: store-on-corner-oldcabin-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-deep-connections.jpg
-- name: old-house-oldhouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-kand-two.jpg
-- name: stories-carryload-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-carryload-smoking-cigarette.jpg
-- name: ellis-island-ellisisland-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-gred-mash.jpg
-- name: rain-princess-P9180036.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-P9180036.jpg
-- name: catacombs-catacombs-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-post-modern.jpg
-- name: beach-clouds-lifeguard-beachclouds-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-kand-two.jpg
-- name: containership-containership-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-ww2-dresden.jpg
-- name: power-lines-power-lines-empty-space-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-alberto-giacometti.jpg
-- name: old-house-oldhouse-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-purple-pond.jpg
-- name: catacombs-catacombs-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dark-dali.jpg
-- name: beach-clouds-lifeguard-beachclouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds.jpg
-- name: stories-4882162452-fa3126b38d-b-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-aqua.jpg
-- name: oldsmallboat-oldsmallboat-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-blue-circuit.jpg
-- name: san-francisco-street-view-san-francisco-street-view-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-rainbow-festival.jpg
-- name: oldbarn-oldbarn-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-atari-missle.jpg
-- name: rockingchair-rockingchair-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-yellow-paper.jpg
-- name: old-barn-old-barn-1500-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-far-away.jpg
-- name: abandonedbuildings_crunch_paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_crunch_paper.jpg
-- name: cargo-ship-cargo-ship-on-sea-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crafty-painting.jpg
-- name: art-museum-art-museum-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-pablo-blue.jpg
-- name: aws-s3-stories-copper-servers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-copper-servers.jpg
-- name: udnie-DSC_0048.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0048.jpg
-- name: hollywood-building-hollywood-building-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-ww2-color.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-rainbow-festival.jpg
-- name: aws-s3-stories-new-machine-road-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-machine-road-atari-missle.jpg
-- name: windowmountain-window-mountain-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dali-three.jpg
-- name: blossombar-really-hot-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-really-hot-file-00-00-00-00.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crunch-paper.jpg
-- name: mistywoods-babyfoot-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-blue-brush.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-clean-view.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-clean-view.png
+- name: old-church-oldchurch-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-clean-view.jpg
+- name: yosemite-yosemite-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-atari-asteroids.jpg
+- name: machine-road-machine-road-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-jap-dys-1.jpg
+- name: subway-subway-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dark-soul.jpg
+- name: oldroad-old-road-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-aqua.jpg
+- name: white-house-lawn-white-house-window-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-cinnamon-rolls.jpg
+- name: oldbarn-oldbarn-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-monet-one.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-constitution.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-constitution.png
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-purp-paper.jpg
+- name: aws-s3-stories-castle-on-hill-edinburgh-blue-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-on-hill-edinburgh-blue-circuit.JPG
+- name: castle-wall-DSC-0067-purp-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purp-paper.JPG
+- name: border-crossing-bordercrossing-purple-storm.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-purple-storm.png
+- name: fence-fence-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-sunday.jpg
+- name: aws-s3-canyon-canyon-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still.jpg
+- name: udnie-IMG_8471.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8471.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-post-modern.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-post-modern.JPG
+- name: udnie-IMG_1937.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_1937.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-deep-connections.jpg
+- name: berlinwall-DSC-0084-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-umberto-bocc.jpg
+- name: supreme-court-supremecourt-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-alien-goggles.jpg
+- name: miamibeach-miamibeach-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-bright-sand.jpg
+- name: old-granary-field-oldhouse-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-graham-sutherland.jpg
+- name: aws-s3-stories-new-42-16-600-400-0-max-1-1-1-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-42-16-600-400-0-max-1-1-1-5.jpg
+- name: rockingchair-rockingchair-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-mucha-mult.jpg
+- name: oldroad-old-road-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-hot-spicy.jpg
+- name: server-cloud-server-racks-door-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-plentiful.jpg
+- name: rockingchair-rockingchair-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-green-zuma.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-rainbow-festival.jpg
+- name: nyc-flag-api-conversations-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-alberto-giacometti.jpg
+- name: machine-road-machine-road-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purple-pond.jpg
+- name: beach-rocks-beach-rocks-currents-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-alberto-giacometti.jpg
+- name: mistywoods-babyfoot-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-plentiful.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-jap-dys-1.jpg
+- name: crow-crow-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-clean-view.jpg
+- name: window-window-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-blue-circuit.jpg
+- name: ellis-island-ellis-island-room-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-colorful-blocks.jpg
+- name: art-museum-art-museum-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-ww2-color.jpg
+- name: yosemite-yosemite-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-space-pizza.jpg
+- name: ellis-island-ellis-island-room-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-kandinsky-bv.jpg
+- name: eduardo-eduardo-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-cinnamon-rolls.jpg
+- name: mosaic-face-mosaic-face-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-bright-sand.jpg
+- name: rain-princess-DSC_0169.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0169.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-alberto-giacometti.jpg
+- name: ellis-island-ellis-island-room-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-umberto-bocc.jpg
+- name: white-house-lawn-white-house-lawn-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-purple-storm.jpg
+- name: oldroad-old-road-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crafty-painting.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-atari-asteroids.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-atari-asteroids.JPG
+- name: san-francisco-skyline-night-san-francisco-skyline-night-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-constitution.jpg
+- name: server-cloud-server-racks-door-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-aqua.jpg
+- name: old-church-oldchurch-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-umberto-bocc.jpg
+- name: rain-princess-IMG_8312.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8312.jpg
 ---
 Extract Metadata From Existing Bibliographic Resources.&nbsp;Police Probe Park Commissioner's Encounter With Officer.&nbsp;Trump Asks Americans To 'stay True To Our Cause'.&nbsp;Haddock Native Supports Navys Nuclear Deterrence.&nbsp;Longtime Lions Club Member Recognized.&nbsp;Cave, Gordon And Maggi Lead Rochester In Win.&nbsp;Mitchell Junior Legion Drops Contest To Watertown.&nbsp;Snohomish Announces Movies In The Park Lineup.&nbsp;
